# cogimon-scenarios

./: .gitignore  CMakeLists.txt  README.md  rsb.conf  setup-cogimon-env.sh.in
scenario-coman/: coman_bring_up.ops
scenario-wipe-board/script/: scn-wipe-board-short.ops
scenario-wipe-board/world/: scn-wipe-board-empty.world  scn-wipe-board-vertical.world
